eksconfig/bankinmobileapiversion-deployment-UAT.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankingmobileapiversion
  labels:
    app: bankingmobileapiversion
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bankingmobileapiversion
      visualize: "true"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bankingmobileapiversion
        visualize: "true"
    spec:
      containers:
        - image: 493010814028.dkr.ecr.sa-east-1.amazonaws.com/bankingmobileapiversion:#{VERSION}#
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 4
          name: bankingmobileapiversion
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 4
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: aws-secret
