eksconfig/bankinmobileapiversion-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bankingmobileapiversion
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app: bankingmobileapiversion
