eksconfig/bankinmobileapiversion-ingress-UAT.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bankingmobileapiversion
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "*.uat.btgbank.com"
      http:
        paths:
          - pathType: Prefix
            path: /mobile-api-version(/|$)(.*)
            backend:
              service:
                name: bankingmobileapiversion
                port:
                  number: 8080
